# hpc_pfc_model

./: .gitignore  README.md
hpc_pfc_jax/: README.md  __init__.py  agent.py  pyproject.toml  run_experiment.py
hpc_pfc_jax/env/: __init__.py  water_maze.py
hpc_pfc_jax/memory/: __init__.py  attention.py  base.py  flat_qk.py
hpc_pfc_jax/reservoir/: __init__.py  base.py  local.py
hpc_pfc_jax/utils/: __init__.py  buffer.py  jax_utils.py  prng.py  rl.py  transforms.py
hpc_pfc_torch/: README.md  __init__.py  pyproject.toml  run_experiment.py
hpc_pfc_torch/agent/: __init__.py  config.py  hpc_pfc.py  networks.py  state.py
hpc_pfc_torch/env/: __init__.py  episodic_water_maze.py
hpc_pfc_torch/memory/: __init__.py  attention.py  circular_buffer.py  episodic_memory.py
hpc_pfc_torch/reservoir/: __init__.py  local_connectivity.py
hpc_pfc_torch/training/: __init__.py  loop.py  losses.py  replay_buffer.py
hpc_pfc_torch/utils/: __init__.py  helpers.py
